# elucidate

./: .env.example  .gitignore  .readthedocs.yaml  README.md  docker-compose-client.yml  docker-compose-docs.yml  docker-compose-server.yml  docker-compose.yml
.husky/: commit-msg
documentation/: .markdownlint.json  mkdocs.yml  pyproject.toml  requirements.txt
documentation/.devcontainer/: devcontainer.json  docker-compose.yml
documentation/docs/: index.md
documentation/docs/backend/: Quiz Creation.md  authentication.md  userAPI.md
documentation/docs/backend/authentication/: authentication.md  password-reset.md
documentation/docs/backend/quickstart/: backend.md  frontend.md  structure.md
documentation/docs/backend/quiz/: quiz_generation.md  quiz_take.md  shared_models.md
documentation/docs/frontend/: quickstart.md  theme.md
documentation/docs/frontend/components/: AnswersBox.md  AuthAlert.md  AuthForm.md  AuthSubmit.md  Box.md  FormTextBox.md  InputField.md
server/: README.md  manage.py  pyproject.toml  requirements.txt
server/.devcontainer/: devcontainer.json  docker-compose.yml
server/api/: asgi.py  settings.py  urls.py  wsgi.py
server/api/apps/auth/: serializers.py  urls.py  views.py
server/api/apps/passwords/: serializers.py  urls.py
server/api/apps/question_create/: permissions.py  tests.py  views.py
server/api/apps/quiz_create/: apps.py  defines.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
server/api/apps/quiz_generate/: serializers.py  tests.py  urls.py  views.py
server/api/apps/quiz_take/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/api/apps/quizzes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/api/apps/shared_models/: admin.py  apps.py  models.py  quiz_serializers.py  serializers.py  statistics_serializers.py  urls.py  views.py
server/api/apps/user_statistics/: tests.py  urls.py  views.py
server/api/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  view.py  views.py
server/api/auth/: urls.py
server/api/auth/tests/: test_auth.py
server/api/users/: serializers.py  urls.py  view.py
server/quiz_create/: apps.py  defines.py  models.py  urls.py  views.py
server/quiz_create/migrations/: 0001_initial.py
server/user/: forms.py  models.py  urls.py  views.py
server/user/migrations/: 0001_initial.py  0002_remove_userdetails_author.py
server/user/templates/: base.html  register.html
(+214 files in other folders)
