[tool.poetry]
name = "Elucidate API"
version = "0.1.0"
description = ""
authors = ["Coders for Causes <hello@codersforcauses.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^22.1"
psycopg2 = "^2.9.3"
Pygments = "^2.12.0"
django-rest-auth = "^0.9.5"
django-allauth = "^0.51.0"
django-cors-headers = "^3.13.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^6.3.0"}
djoser = "^2.1.0"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
